<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvNombre"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvApellido"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvFormaContacto"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/tvNombre"
        android:ems="10"
        android:hint="@string/tvNombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:autofillHints="@string/tvApellido"
        android:ems="10"
        android:hint="@string/tvApellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/sContacto"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/tvFormaContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvMovil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvMovil"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sContacto" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/tvMovil"
        android:ems="10"
        android:hint="@string/tvMovil"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvMovil"
        app:layout_constraintTop_toBottomOf="@+id/sContacto"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvEmail"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovil" />

    <TextView
        android:id="@+id/tvDeporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvDeporte"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <Spinner
        android:id="@+id/sDeporte"
        android:layout_width="345dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/tvDeporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeporte"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:autofillHints="@string/tvEmail"
        android:ems="10"
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvPosicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/tvPosicion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sDeporte" />

    <RadioGroup
        android:id="@+id/contenedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPosicion" >

        <RadioButton
            android:id="@+id/posicion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/posicion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/posicion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/posicion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="enviarInfo"
        android:text="@string/btnEnviarInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedor" />

</androidx.constraintlayout.widget.ConstraintLayout>